# Scanner

app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  scanner.cpp
app/src/main/cpp/libexcelreader/: CMakeLists.txt  excelreader.cpp  excelreader.h
app/src/main/cpp/libexcelreader/OpenXLSX/: CMakeLists.txt
app/src/main/cpp/libexcelreader/csvparser/: csv.h
app/src/main/cpp/libexcelreader/libxls/: CMakeLists.txt
app/src/main/cpp/libexcelreader/libxls/src/: config.h
app/src/main/cpp/libexcelreader/libxls/src/windows/: config-windows.h
app/src/main/java/com/example/scanner/: BaseApplication.kt  MainActivity.kt  Navigation.kt
app/src/main/java/com/example/scanner/data/: AppDatabase.kt  Converters.kt
app/src/main/java/com/example/scanner/data/dao/: CollectionDao.kt  ProjectDao.kt  SetDao.kt  VolumeDao.kt
app/src/main/java/com/example/scanner/data/entity/: CollectionEntity.kt  ProjectEntity.kt  ProjectListItemEntity.kt  SetEntity.kt  VolumeEntity.kt  VolumeSourceEntity.kt  VolumeTitleEntity.kt
app/src/main/java/com/example/scanner/data/repo/: CollectionRepository.kt  ProjectRepository.kt  SetRepository.kt  VolumeRepository.kt
app/src/main/java/com/example/scanner/di/: AppModule.kt
app/src/main/java/com/example/scanner/ui/component/: Error.kt  Loading.kt  Navigation.kt
app/src/main/java/com/example/scanner/ui/component/camera/: CameraMain.kt  CameraView.kt  ExternalDirPreview.kt
app/src/main/java/com/example/scanner/ui/component/collection/: CollectionBottomButtonGroup.kt  CollectionMain.kt  CollectionTopNavigator.kt  VolumeAddDialog.kt  VolumeDeleteDialog.kt  VolumeDisplayBody.kt  VolumeEditDialog.kt  VolumeItem.kt  VolumeViewDialog.kt
app/src/main/java/com/example/scanner/ui/component/home/: BottomButtonGroup.kt  Error.kt  HomeBottomButtonGroup.kt  HomeMain.kt  HomeTopNavigator.kt  Loading.kt  ProjectAddDialog.kt  ProjectDeleteDialog.kt  ProjectDisplayBody.kt  ProjectEditDialog.kt  ProjectItem.kt  ProjectList.kt  ProjectListItem.kt  ProjectModifyDialog.kt  ProjectRenameDialog.kt  TopNavigator.kt
app/src/main/java/com/example/scanner/ui/component/project/: CollectionAddDialog.kt  CollectionDeleteDialog.kt  CollectionDisplayBody.kt  CollectionEditDialog.kt  CollectionItem.kt  ExcelImportDialog.kt  ProjectBottomButtonGroup.kt  ProjectMain.kt  ProjectTopNavigator.kt
app/src/main/java/com/example/scanner/ui/component/start/: CameraView.kt  ExternalDirPreview.kt  StartMain.kt
app/src/main/java/com/example/scanner/ui/viewmodel/: CollectionViewModel.kt  HomeViewModel.kt  ProjectViewModel.kt  StartViewModel.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
